Glyph size fixed

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1496,6 +1496,8 @@ div[datepicker] {
                     color: @white;
                     background: @default-color;
                     line-height: 19px;
+                    font-size: 19px;
+                    top: 3px;
                 }
             }
         }
