--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -202,17 +202,17 @@
             </div>
 
             <div class="form-group indented" ng-if="showAutoPilotDailyBudget()" ng-class="{'has-error': !!errors.autopilotBudget}">
-                <label for="autopilot-budget" class="col-xs-3 control-label">
-                    Total Daily Budget
+                <label for="autopilot-budget" class="col-xs-2 control-label">
+                    Daily Budget
                     <zem-help-popover content="Amount of budget Auto-Pilot can operate with on this Ad Group every day." placement="top"></zem-help-popover>
                 </label>
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                     <div class="input-group">
                         <span class="input-group-addon">$</span>
-                        <input id="autopilot-budget" type="text" class="form-control" ng-model="settings.autopilotBudget" fraction-size="0" empty-text="Minimum: $100" zem-currency-input>
+                        <input id="autopilot-budget" type="text" class="form-control" ng-model="settings.autopilotBudget" fraction-size="0" zem-currency-input>
                     </div>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-4">
                     <label ng-repeat="error in errors.autopilotBudget" class="control-label error" for="autopilot-budget">{{ error }}</label>
                 </div>
             </div>
@@ -220,7 +220,7 @@
             <div class="form-group indented" ng-if="showAutoPilotDailyBudget()">
                 <div class="col-xs-10">
                     Auto-Pilot will optimize for <b>Bounce Rate</b>.<br/>
-                    Minimum Total Daily Budget to run Daily Budget Automation Auto-Pilot on this Ad Group is <b>$100</b>.<br/>
+                    Minimum Total Daily Budget to run Daily Budget Automation Auto-Pilot on this Ad Group is <b>${{settings.autopilotMinBudget}}</b>.<br/>
                     If You wish to change optimization objective please change Primary Campaign Goal in Campaign Settings.
                 </div>
             </div>
