--- a/client/one/partials/graph_infobox.html
+++ b/client/one/partials/graph_infobox.html
@@ -1,6 +1,6 @@
-<div class="graph-infobox-parent">
+<div class="graph-infobox-parent" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox')}">
     <div class="graph-infobox-row">
-        <div class="graph-container" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox'), 'graph-container-short': graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox'), 'graph-infobox-parent': graphVisible && !hasPermission('zemauth.can_see_inbofox')}">
+        <div class="graph-container" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox'), 'graph-container-short': graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox')}">
             <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
         </div>
         <div ng-if="infoboxVisible && hasPermission('zemauth.can_see_infobox')" class="infobox-container" ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
