Show/hide chart button is now available via permissions

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -766,6 +766,11 @@ div[datepicker] {
     height: 34px;
     padding: 0px;
     line-height: 34px;
+    position: relative;
+
+    .internal {
+        .header-button-internal;
+    }
 }
 
 .graph-button-image {
