--- a/client/one/partials/main.html
+++ b/client/one/partials/main.html
@@ -67,7 +67,10 @@
                     <span class="glyphicon glyphicon-info-sign"></span>
                 </a>
             </div>
-            <div class="btn btn-default graph-button pull-right" ng-click="toggleGraph()"><img class="graph-button-image" ng-src="{{ config.static_url }}/one/img/chart.svg"></div>
+            <div class="btn btn-default graph-button pull-right" ng-click="toggleGraph()">
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_hide_chart')" popover-placement="left"></zem-internal-feature>
+                <img class="graph-button-image" ng-src="{{ config.static_url }}/one/img/chart.svg">
+            </div>
             <div ui-view></div>
         </div>
 
