--- a/client/one/partials/campaign_ad_groups.html
+++ b/client/one/partials/campaign_ad_groups.html
@@ -1,5 +1,16 @@
 <div class="page page-campaign-ad-groups">
-    <div class="section" ng-include src="'/partials/graph_infobox.html'"></div>
+    <div class="section">
+        <div class="graph-infobox-parent" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox')}">
+            <div class="graph-infobox-row">
+                <div class="graph-container" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox'), 'graph-container-short': graphVisible && infoboxVisible && hasPermission('zemauth.can_see_infobox')}">
+                    <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+                </div>
+                <div ng-if="infoboxVisible && hasPermission('zemauth.can_see_infobox')" class="infobox-container" ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
+                    <zem-infobox class="infobox-wrapper" header="infoboxHeader" basic-settings="infoboxBasicSettings" performance-settings="infoboxPerformanceSettings" link-to="infoboxLinkTo" state-id="$state.params.id"></zem-infobox>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section table-ad-group-ads">
         <div class="button-bar">
             <div ng-if="hasPermission('zemauth.campaign_ad_groups_add_ad_group')" class="button-bar-item add-source-container">
