Fixed some visual bugs and prevented graph button from showin if user is missing required permission

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -767,18 +767,13 @@ div[datepicker] {
     padding: 0px;
     line-height: 34px;
     position: relative;
+    text-align: center;
 
-    .internal {
-        .header-button-internal;
-    }
-}
+	zem-internal-feature {
+		position: absolute;
 
-.graph-button-image {
-    width: 30px;
-    height: 18px;
-    vertical-align: middle;
-    padding-bottom: 4px;
-    position: relative;
+        margin-left: -4px;
+	}
 
     .internal {
         .header-button-internal;
@@ -816,7 +811,7 @@ div[datepicker] {
 }
 
 .graph-button-image {
-    width: 30px;
+    width: 25px;
     height: 18px;
     vertical-align: middle;
     padding-bottom: 4px;
