CR: Removed some unneeded code

--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -30,7 +30,7 @@
                 details-content="setting.detailsContent"
                 warning="setting.warning"
                 icon="setting.icon || ''"
-                tooltip-text="(setting.tooltip || undefined)">
+                tooltip-text="setting.tooltip">
             </zem-infobox-setting>
         </div>
     </div>
@@ -48,7 +48,7 @@
                 details-content="setting.detailsContent"
                 warning="setting.warning"
                 icon="setting.icon || ''"
-                tooltip-text="(setting.tooltip || undefined)">
+                tooltip-text="setting.tooltip">
             </zem-infobox-setting>
         </div>
     </div>
