Reduced font size for infobox body

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -839,6 +839,7 @@ div[datepicker] {
 .infobox {
     padding: 10px;
     overflow: hidden;
+    font-size: 13px;
     color: @infobox-black;
 
     hr {
