Made performance section larger to accomodate two line settings

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -844,7 +844,7 @@ div[datepicker] {
 
     hr {
         border-top: 1px solid #dddddd;
-        margin: 10px -10px;
+        margin: 10px -10px 5px -10px;
     }
 
     .active-circle-icon {
@@ -871,13 +871,13 @@ div[datepicker] {
 
 .infobox-body {
     overflow-y: scroll;
-    height: 150px;
+    height: 130px;
     // due to scroller
     margin-right: -5px;
 }
 
 .infobox-footer {
-    height: 50px;
+    height: 70px;
 }
 
 .infobox-header-row {
