Fix table button bar layout when only float elements present

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2025,6 +2025,12 @@ div[datepicker] {
             .btn {
                 margin-left: 5px;
             }
+
+            &:after {
+                clear:both;
+                content: "";
+                display: block;
+            }
         }
     }
 
