Square icon instead of circular

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1414,6 +1414,7 @@ div[datepicker] {
     .help-popover:hover,
     .help-popover:active,
     .help-popover:visited {
+    	.border-radius(0%);
         &:after {
             color: #888;
             font-weight: bold;
