Text is now of darker color

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -15,6 +15,7 @@
 
 @infobox-black: #414141;
 @infobox-gray: #aaaaaa;
+@infobox-dark-gray: #888888;
 @white: #fff;
 
 @keyframes show-updated {
@@ -954,7 +955,7 @@ div[datepicker] {
 .infobox-setting-label {
     overflow: hidden;
     display: table-cell;
-    color: @infobox-gray;
+    color: @infobox-dark-gray;
     line-height: 16px;
     vertical-align: top;
 }
@@ -969,7 +970,7 @@ div[datepicker] {
 .infobox-setting-value-comment {
     display: inline-block;
     vertical-align: top;
-    color: @infobox-gray;
+    color: @infobox-dark-gray;
 }
 
 .infobox-setting-icon {
