--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -2,7 +2,7 @@
     <div class="multiselect-tag" ng-repeat="adgroup in selectedAdgroups()" ng-click="removeSelectedAdgroup(adgroup)">
         <span class="multiselect-tag-name">
             {{adgroup.name}}
-            <img class="remove" ng-src="{{ config.static_url }}/one/img/x_gray.svg">
+            <img class="remove" ng-src="{{ config.static_url }}/one/img/x_gray.svg" />
         </span>
      </div>
 </div>
