Added verbose level description to header title.

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -918,6 +918,11 @@ div[datepicker] {
     line-height: 20px;
 }
 
+.infobox-title-level {
+	font-weight: normal;
+	color: @infobox-dark-gray;
+}
+
 .infobox-active-icon {
     color: #00cc18;
     text-align: center;
