--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -27,6 +27,7 @@
                 value="setting.value" 
                 value-description="setting.description"
                 details-label="setting.detailsLabel"
+                details-hide-label="setting.detailsHideLabel"
                 details-content="setting.detailsContent"
                 warning="setting.warning"
                 icon="setting.icon || ''"
@@ -45,6 +46,7 @@
                 value="setting.value" 
                 value-description="setting.description"
                 details-label="setting.detailsLabel"
+                details-hide-label="setting.detailsHideLabel"
                 details-content="setting.detailsContent"
                 warning="setting.warning"
                 icon="setting.icon || ''"
