BCM updates 5 - total credit projection amounts only for allocated date range - allowed lowering budget in ui - use_credits flag default set to true - budget+ tab renamed to 'budget', old tab to 'legacy budget'

--- a/client/one/partials/campaign_budget_item_modal.html
+++ b/client/one/partials/campaign_budget_item_modal.html
@@ -79,7 +79,7 @@
             <div class="col-xs-4">
                 <div class="input-group">
                     <span class="input-group-addon">$</span>
-                    <input id="amount-input" ng-disabled="!budgetItem.credit || !budgetItem.isEditable" type="text" class="form-control" ng-model="budgetItem.amount" zem-currency-input fraction-size="0" />
+                    <input id="amount-input" ng-disabled="!budgetItem.credit || !(budgetItem.isEditable || budgetItem.isUpdatable)" type="text" class="form-control" ng-model="budgetItem.amount" zem-currency-input fraction-size="0" />
                     <div class="input-group-addon">.00</div>
                 </div>
             </div>
