Use icons instead of fixed font

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -926,11 +926,19 @@ div[datepicker] {
 .infobox-active-icon {
     color: #00cc18;
     text-align: center;
+    background-image: url('img/adgroup_status_enabled_green.svg');
+	background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 15px 15px;
 }
 
 .infobox-inactive-icon {
     color: @infobox-black;
     text-align: center;
+    background-image: url('img/adgroup_status_paused_gray.svg');
+	background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 15px 15px;
 }
 
 .infobox-icon {
