--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -941,6 +941,15 @@ div[datepicker] {
     background-size: 15px 15px;
 }
 
+.infobox-stopped-icon {
+    color: @infobox-black;
+    text-align: center;
+    background-image: url('img/adgroup_status_paused_red.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 15px 15px;
+}
+
 .infobox-icon {
     width: 13px;
     height: 13px;
