--- a/client/one/partials/upload_ads_modal.html
+++ b/client/one/partials/upload_ads_modal.html
@@ -107,6 +107,7 @@
                     <div class="progress-text inverted" style="width:{{ getProgressPercentage() }}%;">{{ count }} / {{ batchSize }}</div>
                 </div>
                 <p>Please keep the window open while the upload is in progress.</p>
+                <p ng-if="cancelErrors.cancel" class="error small">{{ cancelErrors.cancel }}</p>
             </div>
 
             <div class="progress-result" ng-if="uploadStatus === uploadBatchStatusConstants.DONE">
@@ -136,7 +137,7 @@
             <div class="col-xs-4" ng-if="uploadStatus === uploadBatchStatusConstants.DONE">
                 <button type="button" class="btn btn-add" ng-click="viewUploadedAds()">View uploaded ads</button>
             </div>
-            <div class="col-xs-4" ng-if="uploadStatus === uploadBatchStatusConstants.FAILED">
+            <div class="col-xs-4" ng-if="uploadStatus === uploadBatchStatusConstants.FAILED || (uploadStatus === uploadBatchStatusConstants.IN_PROGRESS && uploadCanceled && !cancelActionInProgress)">
                 <button type="button" class="btn btn-add" ng-click="upload()">Try again</button>
             </div>
             <div class="col-xs-4" ng-if="uploadStatus !== uploadBatchStatusConstants.DONE">
