--- a/client/one/partials/all_accounts_accounts.html
+++ b/client/one/partials/all_accounts_accounts.html
@@ -1,11 +1,11 @@
 <div class="page page-all-accounts-accounts">
     <div class="section">
-        <div class="graph-infobox-parent" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && hasPermission('zemauth.can_see_infobox')}">
+        <div class="graph-infobox-parent" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && hasInfoboxPermission()}">
             <div class="graph-infobox-row">
-                <div class="graph-container" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && hasPermission('zemauth.can_see_infobox'), 'graph-container-short': graphVisible && hasPermission('zemauth.can_see_infobox')}">
+                <div class="graph-container" ng-class="{'graph-collapsed': !graphVisible, 'graph-hidden': !graphVisible && hasInfoboxPermission(), 'graph-container-short': graphVisible && hasInfoboxPermission()}">
                     <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
                 </div>
-                <div ng-if="hasPermission('zemauth.can_see_infobox') && hasInfoboxPermission()" class="infobox-container infobox-container-full">
+                <div ng-if="hasInfoboxPermission()" class="infobox-container">
                     <zem-infobox class="infobox-wrapper" header="infoboxHeader" basic-settings="infoboxBasicSettings" performance-settings="infoboxPerformanceSettings" link-to="infoboxLinkTo" state-id="$state.params.id"></zem-infobox>
                 </div>
             </div>
