--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -168,7 +168,7 @@ a:visited {
         font-size: 15px;
         font-weight: 600;
         color: #414141;
-        
+
         .sidenote {
             font-weight: 400;
             font-size: 12px;
@@ -677,8 +677,8 @@ div[datepicker] {
 }
 
 .graph-infobox-parent {
-    display: table; 
-    table-layout: fixed; 
+    display: table;
+    table-layout: fixed;
     width: 100%;
 }
 
@@ -1568,7 +1568,7 @@ div[datepicker] {
                 height: 28px;
                 line-height: 22px;
                 vertical-align: middle;
-                
+
                 .glyphicon {
                     display: inline-block;
                     color: @white;
@@ -1586,7 +1586,7 @@ div[datepicker] {
                 font-size: 19px;
                 line-height: 19px;
             }
-            
+
             .navbar-collapse-container {
                 display: inline-block;
 
@@ -2487,6 +2487,12 @@ div[datepicker] {
     display: inline-block;
 }
 
+.auto-pilot-icon-placeholder() {
+    .state-icon-placeholder();
+    background-size: auto;
+    background-position: 0px;
+}
+
 .active-circle-icon {
     .state-icon-placeholder();
     background-image: url('img/active_circle_icon.svg');
@@ -2504,8 +2510,13 @@ div[datepicker] {
 }
 
 .auto-pilot-icon {
-    .state-icon-placeholder();
+    .auto-pilot-icon-placeholder();
     background-image: url('img/auto_pilot_icon.svg');
+}
+
+.auto-pilot-icon-row {
+    .auto-pilot-icon;
+    margin-right: 5px;
 }
 
 .data-status-icon-placeholder() {
@@ -3778,7 +3789,7 @@ select.media-source-select {
     padding-right: 0px !important;
 
     .progress-step-box {
-        background-color: @default-color; 
+        background-color: @default-color;
         color: #fff;
         font-weight: 600;
         font-size: 18px;
