--- a/client/one/partials/upload_ads_modal.html
+++ b/client/one/partials/upload_ads_modal.html
@@ -91,7 +91,7 @@
 
         <div ng-show="!!uploadStatus">
             <hr />
-            <div ng-if="uploadStatus === uploadBatchStatusConstants.IN_PROGRESS && !uploadCanceled">
+            <div ng-if="uploadStatus === uploadBatchStatusConstants.IN_PROGRESS">
                 <div class="progress-steps">
                     <div class="progress-step-box" ng-repeat="s in steps" ng-if="$index < step">{{$index + 1}}</div>
 
@@ -115,7 +115,7 @@
                 <p>All content ads were added to the list.</p>
             </div>
 
-            <div class="progress-result" ng-if="uploadStatus === uploadBatchStatusConstants.FAILED && !uploadCanceled">
+            <div class="progress-result" ng-if="uploadStatus === uploadBatchStatusConstants.FAILED">
                 <h4 class="title failed">Ooops, upload failed</h4>
                 <p>Content upload was unsuccessful. {{ getErrorDescription() }}</p>
                 <div class="form-group" ng-if="errors.details.reportUrl">
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="progress-result" ng-if="uploadCanceled && uploadStatus !== uploadBatchStatusConstants.DONE">
+            <div class="progress-result" ng-if="uploadStatus === uploadBatchStatusConstants.CANCELLED">
                 <h4 class="title failed">Upload canceled</h4>
             </div>
         </div>
@@ -137,11 +137,11 @@
             <div class="col-xs-4" ng-if="uploadStatus === uploadBatchStatusConstants.DONE">
                 <button type="button" class="btn btn-add" ng-click="viewUploadedAds()">View uploaded ads</button>
             </div>
-            <div class="col-xs-4" ng-if="uploadStatus === uploadBatchStatusConstants.FAILED || (uploadStatus === uploadBatchStatusConstants.IN_PROGRESS && uploadCanceled && !cancelActionInProgress)">
+            <div class="col-xs-4" ng-if="uploadStatus === uploadBatchStatusConstants.FAILED || uploadStatus === uploadBatchStatusConstants.CANCELLED">
                 <button type="button" class="btn btn-add" ng-click="upload()">Try again</button>
             </div>
             <div class="col-xs-4" ng-if="uploadStatus !== uploadBatchStatusConstants.DONE">
-                <button type="button" class="btn btn-default" ng-click="cancel()" ng-disabled="isCancelDisabled()">{{ cancelActionInProgress ? "Canceling upload ..." : "Cancel upload" }}</button>
+                <button type="button" class="btn btn-default" ng-click="cancel()" ng-disabled="isCancelDisabled()">Cancel upload</button>
             </div>
         </div>
     </form>
