--- a/client/one/partials/main.html
+++ b/client/one/partials/main.html
@@ -61,7 +61,7 @@
                 enable-publisher-filter="enablePublisherFilter"
                 show-publisher-selected="showPublisherSelected">
             </zem-filter>
-            <div ng-if="isPermissionInternal('zemauth.can_hide_chart')" class="btn btn-default graph-button pull-right" ng-click="toggleGraph()">
+            <div ng-if="hasPermission('zemauth.can_hide_chart') && isChartVisible()" class="btn btn-default graph-button pull-right" ng-click="toggleGraph()">
                 <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_hide_chart')" popover-placement="left"></zem-internal-feature>
                 <img class="graph-button-image" ng-src="{{ config.static_url }}/one/img/chart.svg">
             </div>
