partially refactored retargeting directive so it no longer uses navigation bar data

--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -126,7 +126,7 @@
                 </label>
 
                 <div class="col-xs-6 col-md-4">
-                    <zem-retargeting zem-selected-adgroup-ids="settings.retargetingAdGroups" zem-account="account"></zem-retargeting>
+                    <zem-retargeting zem-selected-adgroup-ids="settings.retargetingAdGroups" zem-retargetable-adgroups="retargetableAdGroups" zem-account="account"></zem-retargeting>
                 </div>
 
                 <label ng-repeat="error in errors.retargetingIds" class="control-label error">{{ error }}</label>
