Triggers autopilot on source status change and displays message

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -471,6 +471,12 @@ a:visited {
         font-size: 12px;
         font-color: #414141;
     }
+
+    &.alert-success {
+        background-color: #f0f9e5;
+        border: 1px solid #c0e68f;
+        font-size: 12px;
+    }
 }
 
 .popover {
@@ -2054,6 +2060,10 @@ div[datepicker] {
 
 .page {
     .alert-sync {
+        margin-bottom: 10px;
+    }
+
+    .alert-auto-pilot-changes {
         margin-bottom: 10px;
     }
 
