--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -215,6 +215,39 @@ a:visited {
     padding-left: 5px;
 }
 
+.form-alert-box {
+	display: table;
+	clear: left;
+	margin: 10px 0px 0px 14px;
+	padding-bottom: 0px;
+
+	.form-alert-exclamation {
+		display: table-cell;
+		font-size: 13px;
+        color: orange;
+	}
+
+	.form-alert-body {
+		display: table-cell;
+		padding-left: 8px;
+		font-size: 13px;
+        color: #333;
+	}
+
+	ul {
+		margin-top: 5px;
+	}
+
+	li {
+		font-size: 13px;
+        color: #333;
+	}
+}
+
+.after-form-alert-box {
+	clear: left;
+}
+
 .btn {
     .border-radius(2px);
     .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
