Use non-minimized libs when in debug

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,8 +7,15 @@
 {% js_data %}
 <link type="text/css" rel="stylesheet" href="{{ staticUrl }}/one/zemanta-one.lib.min.css" />
 <link type="text/css" rel="stylesheet" href="{{ staticUrl }}/one/zemanta-one.min.css" />
+
+{% if debug %}
+<script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.lib.js"></script>
+<script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.js"></script>
+{% else %}
 <script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.lib.min.js"></script>
 <script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.min.js"></script>
+{% endif %}
+
 {% endblock %}
 
 {% block content %}
