made several modifications for setting selection to disabled in case filtering is enabled

--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -15,7 +15,8 @@
             position='down'>
         <div 
             ng-class="{archived: adgroup.archived}"
-            ng-bind-html="adgroup.name | highlight: $select.search">
+            ng-bind-html="adgroup.name | highlight: $select.search"
+            ui-disable-choice="!adgroup.enabled">
         </div>
     </ui-select-choices>
 </ui-select>
