--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,6 +11,7 @@
 {% if debug %}
 <script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.lib.js"></script>
 <script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.js"></script>
+<script src="http://localhost:35729/livereload.js"></script>
 {% else %}
 <script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.lib.min.js"></script>
 <script type="text/javascript" src="{{ staticUrl }}/one/zemanta-one.min.js"></script>
