- Some fronted fixes and added django view for campaign goals - db migrations - goal validation - adding/modifying & removing of goals - tests

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3297,6 +3297,12 @@ zem-editable-currency-field {
                 .form-group {
                     margin-right: 0;
                 }
+
+                .goal-type {
+                    .input-group-addon {
+                        width: 35px;
+                    }
+                }
             }
 
             .add-scheduled-report-form {
@@ -3702,7 +3708,7 @@ select.media-source-select {
                 position: relative;
             }
 
-            color: #c2c2c2;
+            color: #aaaaaa;
             padding-top: 7px;
         }
     }
@@ -3722,6 +3728,12 @@ select.media-source-select {
         .plus-label {
             padding-left: 10px;
         }
+    }
+
+    .helper-label {
+        color: #aaaaaa;
+        text-align: right;
+        font-size: 13px;
     }
 
     .campaign-goal-row {
@@ -3744,10 +3756,14 @@ select.media-source-select {
                 }
             }
         }
+        &.archived, &.archived .camp-goal-text {
+            color: #aaaaaa !important;
+            cursor: default !important;
+        }
 
         & > div {
             border-style: solid;
-            border-color: #d2d2d2;
+            border-color: #aaaaaa;
             border-width: 1px 1px 1px 0;
             min-height: 50px;
             .border-radius(0px);
@@ -3765,7 +3781,7 @@ select.media-source-select {
             &.campaign-goal-index {
                 font-size: 22px;
                 font-weight: 200;
-                color: #c2c2c2;
+                color: #aaaaaa;
                 text-align: center;
             }
 
@@ -3777,7 +3793,7 @@ select.media-source-select {
                 .conv-goal-text {
                     font-size: 11px;
                     line-height: 11px;
-                    color: #c2c2c2;
+                    color: #aaaaaa;
                 }
 
                 .center-area {
@@ -3787,10 +3803,18 @@ select.media-source-select {
 
             &.campaign-goal-edit {
                 text-align: center;
+
+                .centered {
+                    height: 16px
+                }
             }
 
             &.campaign-goal-delete {
                 text-align: center;
+                
+                .centered {
+                    height: 16px
+                }
             }
 
             .center-area {
@@ -3799,6 +3823,7 @@ select.media-source-select {
                 bottom: 0;
                 left: 0;
                 right: 0;
+                padding-right: 2px;
 
                 &:before {
                     content: '';
@@ -3901,4 +3926,8 @@ select.media-source-select {
             color: #fff;
         }
     }
+}
+
+.nopadding {
+    padding: 0 !important;
 }
