--- a/client/one/partials/zem_campaign_goals.html
+++ b/client/one/partials/zem_campaign_goals.html
@@ -1,4 +1,9 @@
 <div class="zem-campaign-goals">
+	<div class="row" ng-show="!campaignGoals.length">
+		<div class="col-xs-7 campaign-goal-row nopadding">
+			Currently there are no defined campaign goals.
+		</div>
+	</div>
     <div class="row campaign-goal-row" ng-repeat="goal in campaignGoals" ng-class="{'primary': goal.primary}">
         <div class="campaign-goal-index col-xs-1" ng-click="setPrimary(goal)">
             <div class="center-area">
@@ -24,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div class="campaign-goal-delete col-xs-1" ng-click="removeGoal(goal)">
+        <div class="campaign-goal-delete col-xs-1" ng-click="deleteGoal(goal)">
             <div class="center-area">
                 <div class="centered">
                     <i class="glyphicon glyphicon-remove" title="Remove"></i>
@@ -32,8 +37,15 @@
             </div>
         </div>
     </div>
-    <button type="button" class="btn btn-default" ng-click="editGoal()">
-        <span class="plus-sign">+</span>
-        <span class="plus-label">Add new goal</span>
-    </button>
+	<div class="row">
+		<div class="col-xs-5 nopadding">
+			<button type="button" class="btn btn-default" ng-click="addGoal()">
+				<span class="plus-sign">+</span>
+				<span class="plus-label">Add new goal</span>
+			</button>
+		</div>
+		<div class="col-xs-7 helper-label nopadding" ng-show="!!campaignGoals.length">
+			Click on a goal to set it as primary
+		</div>
+	</div>
 </div>
