--- a/client/one/partials/campaign_settings.html
+++ b/client/one/partials/campaign_settings.html
@@ -43,7 +43,7 @@
 
                 <div class="row">
                     <div class="col-xs-6">
-                        <zem-campaign-goals></zem-campaign-goals>
+                        <zem-campaign-goals campaign="campaign" goals="campaignGoals" model="campaignGoalsDiff"></zem-campaign-goals>
                     </div>
                 </div>
             </div>
