cr: added missing tooltip and fixed a bug with indexOf

--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -14,7 +14,12 @@
             repeat="adgroup in availableAdgroups() | filter: {name: $select.search} track by adgroup.id"
             position='down'
             ui-disable-choice="!adgroup.enabled">
+
         <div 
+            zem-lazy-popover-text="{{adgroup.tooltip}}"
+            zem-lazy-popover-placement="left"
+            zem-lazy-popover-animation-class="fade"
+            zem-lazy-popover-append-to-body="true"
             ng-class="{archived: adgroup.archived}"
             ng-bind-html="adgroup.name | highlight: $select.search">
         </div>
