added id before ad group name and made disabled style look the same as archived style on nav bar

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3512,6 +3512,12 @@ zem-submission-status {
             text-decoration: underline;
         }
     }
+
+    li {
+        .select2-disabled {
+            background: initial;
+        }
+    }
 }
 
 /**
