--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -17,11 +17,11 @@
 
         <div 
             zem-lazy-popover-text="{{adgroup.tooltip}}"
-            zem-lazy-popover-placement="left"
+            zem-lazy-popover-placement="right"
             zem-lazy-popover-animation-class="fade"
             zem-lazy-popover-append-to-body="true"
             ng-class="{archived: adgroup.archived}"
-            ng-bind-html="adgroup.name | highlight: $select.search">
+            ng-bind-html="adgroup.id + ' - ' + adgroup.name | highlight: $select.search">
         </div>
     </ui-select-choices>
 </ui-select>
