--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -12,16 +12,9 @@
     <ui-select-choices 
             group-by="groupByCampaign" 
             repeat="adgroup in availableAdgroups() | filter: {name: $select.search} track by adgroup.id"
-            position='down'
-            ui-disable-choice="!adgroup.enabled">
-
+            position="down">
         <div 
-            zem-lazy-popover-text="{{adgroup.tooltip}}"
-            zem-lazy-popover-placement="right"
-            zem-lazy-popover-animation-class="fade"
-            zem-lazy-popover-append-to-body="true"
-            ng-class="{archived: adgroup.archived || !adgroup.enabled}"
-            ng-bind-html="adgroup.id + ' - ' + adgroup.name | highlight: $select.search">
+            ng-bind-html="adgroup.id + ' - ' + adgroup.name + adgroup.suffix | highlight: $select.search">
         </div>
     </ui-select-choices>
 </ui-select>
